--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,9 +1,9 @@
 [uwsgi]
-plugins = python27
-uid=www-data
+#plugins = python27
+#uid=www-data
+uid=root
 gid=www-data
-#socket=/home/run/fortnite.sock
-socket=8000
+socket=/home/run/burraqmarketing.sock
 chmod-socket=777
 processes=2
 enable-threads=True
